# simple_nn

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
